--- a/Prot 1 func/css/style.css
+++ b/Prot 1 func/css/style.css
@@ -44,6 +44,7 @@
 	padding-left: 60px; 
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
+	height: 56px;
 }
 
 .nav>li>a, .nav>li{
@@ -120,9 +121,10 @@
 	margin-top: 15px;
 	margin-bottom: 15px;
 	vertical-align: top;
-
-	height: inherit;
-	width: inherit;
+	max-width: :100%;
+	max-height: 100%;
+	height: 260px;
+	width: auto;
 }
 
 html,body{
