--- a/Prot 1 func/css/style.css
+++ b/Prot 1 func/css/style.css
@@ -117,6 +117,15 @@
     height: 100%;
 }
 
+.icon{
+	background-size: contain;
+	background-position: center center;
+	background-repeat: no-repeat;
+	display: block;
+	height: 100%;
+	width: 100%;
+}
+
 .img{
 	margin-top: 15px;
 	margin-bottom: 15px;
