--- a/Prot 1 func/css/style.css
+++ b/Prot 1 func/css/style.css
@@ -110,9 +110,9 @@
 }
 
 .background{
-	background-image: url(../imgs/maxresdefault.jpg);
+	background-image: url(../imgs/background2.jpg);
     background-size: cover;
-    background-position: 0% 100%;
+    background-position: 100% 40%;
     background-repeat: no-repeat;
     height: 100%;
 }
