--- a/Prot 1 func/css/style.css
+++ b/Prot 1 func/css/style.css
@@ -52,6 +52,10 @@
 	max-height:60px;
 }
 
+.nav-button, .left-menu{
+	text-align: center;
+}
+
 .nav>li>a, .nav>li, .active{
 	-webkit-transition: all ease-in-out .3s; /* Safari and Chrome */
     -moz-transition: all ease-in-out .3s; /* Firefox */
@@ -98,7 +102,13 @@
 
 
 .mainicon{
+	text-align: center;
 	font-size: 40px;
+}
+
+.iconnum{
+	text-align: center;
+	font-size: 20px;
 }
 
 .smallpadding{
@@ -134,6 +144,10 @@
 	max-height: 100%;
 	height: 260px;
 	width: auto;
+}
+
+.table tr:first-child td{
+	border-top: 0;
 }
 
 html,body{
