--- a/Prot 1 func/css/style.css
+++ b/Prot 1 func/css/style.css
@@ -26,6 +26,11 @@
 
 #sidebar{
 	border-bottom-right-radius: 5px;
+	overflow: hidden;
+}
+
+.side{
+	color: rgba(360, 360, 360, 1);
 }
 
 #mainwindow{
@@ -36,6 +41,8 @@
 }
 
 #maintittle{
+	background-color: rgba(51, 51, 51,0.6);
+	color: white;
 	padding-left: 60px;
 	border-bottom-right-radius: 5px;
 }
@@ -54,6 +61,16 @@
 
 .nav-button, .left-menu{
 	text-align: center;
+}
+
+.arrows{
+	text-align: center;
+	background-color: rgba(100,100,100,0.6);
+	border-radius: 5px;
+}
+
+#top-arrow{
+	visibility: hidden;
 }
 
 .nav>li>a, .nav>li, .active{
@@ -111,6 +128,11 @@
 	font-size: 40px;
 }
 
+.scollicon{
+	text-align: center;
+	font-size: 30px;
+}
+
 .iconnum{
 	text-align: center;
 	font-size: 20px;
@@ -122,6 +144,10 @@
 }
 .padding2{
 	padding: 2px;
+}
+
+.top-buffer20{
+	margin-top: 20px;
 }
 
 .background{
@@ -176,10 +202,6 @@
 
 .table tr:first-child td{
 	border-top: 0;
-}
-
-.progress{
-	margin-top: 5px;
 }
 
 html, body, .imagefield{
