--- a/Prot 1 func/css/style.css
+++ b/Prot 1 func/css/style.css
@@ -18,10 +18,16 @@
 #helper{
 	height: 69px;
 	/*width: auto;*/
+	margin-bottom: 0;
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
 	text-align: center;
 	/*display: inline-block;*/
+}
+
+.noheight{
+	height: 0 !important;
+	margin-bottom: 69px !important;
 }
 
 #sidebar{
@@ -91,7 +97,7 @@
     overflow: hidden;
 }
 
-#headerfunc.width, #helperfunc.width, #maintext.width{
+#headerfunc.width, #helperfunc.width, #maintext.width, #helper{
     -webkit-transition: all .15s ease-in-out;
     -moz-transition: all .15s ease-in-out;
     -o-transition: all .15s ease-in-out;
@@ -160,6 +166,10 @@
     width:100%;
 }
 
+.backinit{
+	background-image: url(../imgs/backgroundinit.jpg) !important;
+}
+
 .icon{
 	background-size: contain;
 	background-position: center center;
@@ -192,13 +202,14 @@
 	opacity: 0.8;
 }
 .img{
-	margin-top: 15px;
-	margin-bottom: 15px;
+	/* margin-top: 15px; */
+	/* margin-bottom: 15px; */
 	vertical-align: top;
 	max-width: :100%;
 	max-height: 100%;
 	height: 260px;
 	width: auto;
+	overflow: hidden;
 }
 
 .table tr:first-child td{
